--- a/netlify.toml
+++ b/netlify.toml
@@ -2,11 +2,10 @@
   command = "npm run build"
   publish = "out"
 
-[[plugins]]
-  package = "@netlify/plugin-nextjs"
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
 
 [build.environment]
-  NODE_VERSION = "20"
-
-# Password protection - Configure this in Netlify UI:
-# Site Settings > Visitor Access > Password Protection
+  NODE_VERSION = "18"
